@@ -69,7 +69,7 @@ setup(name='zope.app.publication',
                       'zope.browser>=1.2',
                       'zope.location',
                       'zope.publisher>=3.8.0',
-                      'zope.traversing>=3.7.0',
+                      'zope.traversing>=3.9.0',
                       'setuptools',
                       ],
     include_package_data = True,
