@@ -593,7 +593,7 @@ class ZopePublicationTests(BasePublicationTests):
         self.assertEqual(txn_info['location'], expected_path)
 
     def testSiteEvents(self):
-        from zope.app.publication.interfaces import IBeforeTraverseEvent
+        from zope.traversing.interfaces import IBeforeTraverseEvent
         from zope.app.publication.interfaces import IEndRequestEvent
 
         set = []
